// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should call useInfiniteScroll on update 1`] = `
Array [
  Array [
    Array [],
    "list.data",
    100,
    [MockFunction],
    [Function],
  ],
  Array [
    Array [],
    "list.data",
    100,
    [MockFunction],
    [Function],
  ],
]
`;

exports[`List should call useRefresh on update 1`] = `
Array [
  Array [
    [Function],
    0,
    Array [],
    Array [
      "POLL_TOGGLE_FLAG",
      "POLL_TOGGLE_HIDE",
    ],
  ],
  Array [
    [Function],
    0,
    Array [],
    Array [
      "POLL_TOGGLE_FLAG",
      "POLL_TOGGLE_HIDE",
    ],
  ],
]
`;

exports[`List should match snapshot 1`] = `
<Fragment>
  <ListMenu
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "body": Object {
            "add": "",
            "options": Array [],
            "title": "",
          },
          "menu": Object {
            "delete": false,
            "secret": false,
          },
        },
        "list": Object {
          "data": Array [],
          "menu": Object {
            "search": "",
          },
        },
        "loading": 0,
        "log": Array [],
        "user": Object {},
        "view": Object {
          "body": Object {
            "add": "",
          },
          "data": Array [],
          "menu": Object {
            "delete": false,
            "settings": false,
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <ListBody
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "body": Object {
            "add": "",
            "options": Array [],
            "title": "",
          },
          "menu": Object {
            "delete": false,
            "secret": false,
          },
        },
        "list": Object {
          "data": Array [],
          "menu": Object {
            "search": "",
          },
        },
        "loading": 0,
        "log": Array [],
        "user": Object {},
        "view": Object {
          "body": Object {
            "add": "",
          },
          "data": Array [],
          "menu": Object {
            "delete": false,
            "settings": false,
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "handleScroll": [MockFunction],
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
</Fragment>
`;
